Style: fixed product cards overlapping on the products templates and made the card & page fully responsive. Also removed the wishlist icon from the navbar and wishlist text from the mobile navbar due to time limitations a wishlist wont be implemented and then adjusted the close search button location to match up with search button again with one item less in the navbar

--- a/products/static/products/css/product.css
+++ b/products/static/products/css/product.css
@@ -265,6 +265,17 @@
 /* --------------------------Media Query */
 
 /* Active for screen sizes under 992px */
+@media (min-width: 992px) {
+    .product-card {
+        height: 400px;
+        width: 270px;
+        margin: 0 auto 50px;
+    }
+
+
+}
+
+/* Active for screen sizes under 992px */
 @media (max-width: 992px) {
     #expandedImg {
         height: 375px;
@@ -277,6 +288,11 @@
     .column {
         width: 19%;
     }
+
+    .product-image img {
+        width: 298px;
+        height: 298px;;
+    }    
 
 }
 
@@ -317,6 +333,15 @@
     .review-row {
         margin-bottom: 8rem!important;
     }
+
+    .product-top-sect {
+        flex-direction: column;
+    }
+
+    .product-top-sect ol,
+    .sort-by-btn {
+        margin-left: 0;
+    }
 }
 
 /* Active for screen sizes under 576px */
@@ -337,6 +362,21 @@
     #expandedImg {
         height: 200px;
     }
+
+    .product-card {
+        height: 390px;
+        width: 260px;
+    }
+
+    .product-image img {
+        width: 258px;
+        height: 258px;
+    }
+
+    .current-price {
+        font-size: 18px;
+    }
+
 }
 
 
