--- a/static/css/style.css
+++ b/static/css/style.css
@@ -209,7 +209,7 @@ ul {
 
 .close-search {
     position: absolute;
-    right: 174px;
+    right: 127px;
     top: 11px;
     height: 44px;
     color: #000;
@@ -221,6 +221,10 @@ ul {
     opacity: 0;
     visibility: hidden;
     transition: 0.2s;
+}
+
+.close-search:hover {
+    color: black;
 }
 
 .close-search.active {
